--- a/user.ipynb
+++ b/user.ipynb
@@ -1463,6 +1463,259 @@
     "results = c4_retrieval.retrieve(question)\n",
     "display_c4_results(question, results)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔍 질문: whiskey와 vermouth가 들어간 칵테일들\n",
+      "\n",
+      "🤖 Task Classifier 분석 중...\n",
+      "📊 분류 결과: C3 (신뢰도: 90%)\n",
+      "💭 분류 이유: 주어진 재료 리스트를 기반으로 칵테일을 찾는 질문이므로 C3가 적합\n",
+      "\n",
+      "🚀 C3 알고리즘으로 검색 실행...\n",
+      "C3 Retrieval (Multi-hop 재료 확장): 사용자 질문 - whiskey와 vermouth가 들어간 칵테일들\n",
+      "1단계 - 키워드 추출: {'ingredients': ['whiskey', 'vermouth'], 'cocktail_names': []}\n",
+      "   → 재료 기반 초기 검색: 6개 칵테일\n",
+      "3-1단계 - 초기 재료 검색: 6개\n",
+      "   → Multi-hop 확장 결과: 6개 칵테일\n",
+      "      상위 5개: [\"hunter's moon\", \"owen's grandmother's revenge\", 'avalon', 'snowball', 'shark attack']\n",
+      "3-2단계 - Multi-hop 확장: 6개\n",
+      "4단계 - 후보 정리: 10개 (중복 제거 후)\n",
+      "   → imageDescription 유사도 랭킹:\n",
+      "      1. damned if you do (유사도: 0.414)\n",
+      "      2. hot toddy (유사도: 0.396)\n",
+      "      3. addison (유사도: 0.370)\n",
+      "      4. ziemes martini apfelsaft (유사도: 0.369)\n",
+      "      5. zoksel (유사도: 0.346)\n",
+      "      6. avalon (유사도: 0.317)\n",
+      "      7. snowball (유사도: 0.314)\n",
+      "      8. owen's grandmother's revenge (유사도: 0.298)\n",
+      "      9. shark attack (유사도: 0.284)\n",
+      "      10. hunter's moon (유사도: 0.279)\n",
+      "4단계 - 최종 선정: 3개\n",
+      "   1. damned if you do\n",
+      "   2. hot toddy\n",
+      "   3. addison\n",
+      "5단계 - Multi-hop 검색 완료: 3개 결과\n",
+      "\n",
+      "🔗 C3 Multi-hop 재료 확장 검색 결과\n",
+      "============================================================\n",
+      "📝 질문: whiskey와 vermouth가 들어간 칵테일들\n",
+      "🔍 찾은 칵테일: 3개\n",
+      "============================================================\n",
+      "\n",
+      "1. 🍸 damned if you do\n",
+      "   📋 카테고리: shot\n",
+      "   🥃 글라스: shot glass\n",
+      "   🍾 알코올: Alcoholic\n",
+      "   🥄 레시피 (2개 재료):\n",
+      "      - 0.75 oz whiskey\n",
+      "      - 0.25 oz hot damn\n",
+      "   📖 설명: The Damned If You Do is a spirited riff on the classic Hot Damn, a high-octane, candy-flavored cocktail popular in the 1980s. This fiery concoction belongs to the shooter family, known for their quick, potent delivery and often audacious flavor combinations.\n",
+      "\n",
+      "2. 🍸 hot toddy\n",
+      "   📋 카테고리: cocktail\n",
+      "   🥃 글라스: irish coffee cup\n",
+      "   🍾 알코올: Alcoholic\n",
+      "   🥄 레시피 (5개 재료):\n",
+      "      - 50 ml whiskey\n",
+      "      - 15 ml honey\n",
+      "      - 1 cinnamon\n",
+      "      - 1 lemon\n",
+      "      - 2 cloves\n",
+      "   📖 설명: The Hot Toddy is a classic warming drink cocktail, often enjoyed during cold weather. Originating in the 18th century, it¡¯s a comforting blend of whiskey, honey, spices, and citrus - a perfect remedy for a winter chill.\n",
+      "\n",
+      "3. 🍸 addison\n",
+      "   📋 카테고리: cocktail\n",
+      "   🥃 글라스: martini glass\n",
+      "   🍾 알코올: Alcoholic\n",
+      "   🥄 레시피 (2개 재료):\n",
+      "      - 1 1/2 shot gin\n",
+      "      - 1 1/2 shot vermouth\n",
+      "   📖 설명: The Addison is a classic Martini variation, likely hailing from the early 20th century. This gin-based cocktail is part of the Martini family, known for its dry, crisp flavor profile and elegant presentation.\n",
+      "\n",
+      "🔗 C3 Multi-hop 재료 확장 검색\n",
+      "============================================================\n",
+      "📝 질문: whiskey와 vermouth가 들어간 칵테일들\n",
+      "🔍 찾은 칵테일: 3개\n",
+      "============================================================\n",
+      "\n",
+      "🤖 Multi-hop 재료 확장 기반 칵테일 네트워크 전문가 답변 생성 중...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div style=\"background-color: #f8f9fa; padding: 20px; border-radius: 10px; margin: 20px 0; border: 2px solid #dee2e6;\">\n",
+       "        <h2 style=\"color: #495057; margin-top: 0;\">🔍 검색된 칵테일 목록</h2>\n",
+       "        <pre style=\"background-color: #ffffff; padding: 15px; border-radius: 5px; overflow-x: auto; white-space: pre-wrap;\">1. damned if you do\n",
+       "   카테고리: shot\n",
+       "   글라스: shot glass\n",
+       "   알코올: Alcoholic\n",
+       "   레시피:\n",
+       "     - 0.75 oz whiskey\n",
+       "     - 0.25 oz hot damn\n",
+       "   제조법: Pour into shot glass. Put in mouth. Repeat as deemed necessary.\n",
+       "   설명: The Damned If You Do is a spirited riff on the classic Hot Damn, a high-octane, candy-flavored cocktail popular in the 1980s. This fiery concoction belongs to the shooter family, known for their quick, potent delivery and often audacious flavor combinations.\n",
+       "   외관: The drink in the tall shot glass appears to be a deep amber color, likely a spiced spirit or a small portion of brandy, given its hue and slight carbonation. The short shot glass contains a similar colored liquid, suggesting it could be the same or a closely related beverage, perfect for tasting or sipping in small portions.\n",
+       "\n",
+       "2. hot toddy\n",
+       "   카테고리: cocktail\n",
+       "   글라스: irish coffee cup\n",
+       "   알코올: Alcoholic\n",
+       "   레시피:\n",
+       "     - 50 ml whiskey\n",
+       "     - 15 ml honey\n",
+       "     - 1 cinnamon\n",
+       "     - 1 lemon\n",
+       "     - 2 cloves\n",
+       "   제조법: STEP 1 Whisk the whisky and honey together and split between 2 heatproof glasses. Add half of the cinnamon stick to each, then top up with 200ml boiling water. STEP 2 Add a splash of lemon juice to each, then taste and add more to your preference. Finish each with a slice of lemon, studded with a clove, and serve immediately.\n",
+       "   설명: The Hot Toddy is a classic warming drink cocktail, often enjoyed during cold weather. Originating in the 18th century, it¡¯s a comforting blend of whiskey, honey, spices, and citrus - a perfect remedy for a winter chill.\n",
+       "   외관: The golden-brown cocktail is served in a clear mug adorned with a cinnamon stick and a lemon wedge for garnish, giving it a cozy, warm appearance perfect for fall.\n",
+       "\n",
+       "3. addison\n",
+       "   카테고리: cocktail\n",
+       "   글라스: martini glass\n",
+       "   알코올: Alcoholic\n",
+       "   레시피:\n",
+       "     - 1 1/2 shot gin\n",
+       "     - 1 1/2 shot vermouth\n",
+       "   제조법: Shake together all the ingredients and strain into a cold glass.\n",
+       "   설명: The Addison is a classic Martini variation, likely hailing from the early 20th century. This gin-based cocktail is part of the Martini family, known for its dry, crisp flavor profile and elegant presentation.\n",
+       "   외관: The cocktail being poured into a clear coupe glass displays a rich golden hue, suggesting a fine brandy or cognac.\n",
+       "</pre>\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div style=\"background-color: #e8f4fd; padding: 20px; border-radius: 10px; margin: 20px 0; border-left: 5px solid #007bff;\">\n",
+       "        <h2 style=\"color: #0056b3; margin-top: 0;\">🤖 Multi-hop 재료 확장 기반 칵테일 네트워크 전문가 답변</h2>\n",
+       "        <div style=\"white-space: pre-wrap; font-family: 'Segoe UI', Arial, sans-serif; line-height: 1.6; color: #212529;\">whiskey와 vermouth가 포함된 칵테일들은 서로 다른 맛의 프로필과 제조 기법을 통해 다양한 조합을 만들어낼 수 있습니다. 아래에서 이 두 재료를 포함한 칵테일들을 살펴보겠습니다.\n",
+       "\n",
+       "### 1. 초기 재료: Whiskey\n",
+       "whiskey는 다양한 칵테일의 기본 재료로 사용되며, 그 특유의 깊고 풍부한 맛은 여러 음료와 잘 어울립니다. 예를 들어, **Hot Toddy**는 whiskey를 주재료로 하여 따뜻하고 향긋한 음료로, 겨울철에 인기가 높습니다. 이 칵테일은 honey, cinnamon, lemon, cloves와 같은 재료와 조화를 이루어 달콤하고 스파이시한 맛을 제공합니다.\n",
+       "\n",
+       "### 2. 관련 칵테일: Hot Toddy\n",
+       "- **레시피**:\n",
+       "  - 50 ml whiskey\n",
+       "  - 15 ml honey\n",
+       "  - 1 cinnamon stick\n",
+       "  - 1 lemon slice\n",
+       "  - 2 cloves\n",
+       "- **제조법**: whiskey와 honey를 섞고, 끓는 물을 추가한 후, 레몬과 향신료로 마무리합니다.\n",
+       "- **맛 프로필**: 따뜻하고 달콤하며 스파이시한 맛이 특징입니다.\n",
+       "\n",
+       "### 3. 공통 재료: Vermouth\n",
+       "Vermouth는 주로 칵테일의 베이스로 사용되며, 다양한 맛의 변화를 줄 수 있는 중요한 재료입니다. **Addison** 칵테일은 gin과 vermouth를 주재료로 하여, 드라이하고 크리스프한 맛을 제공합니다. 이 칵테일은 Martini 패밀리에 속하며, elegant한 프레젠테이션이 특징입니다.\n",
+       "\n",
+       "### 4. 새로운 칵테일의 확장: Addison\n",
+       "- **레시피**:\n",
+       "  - 1 1/2 shot gin\n",
+       "  - 1 1/2 shot vermouth\n",
+       "- **제조법**: 재료를 섞고 차가운 글라스에 스트레인합니다.\n",
+       "- **맛 프로필**: 드라이하고 상쾌한 맛이 특징이며, vermouth의 허브 향이 강조됩니다.\n",
+       "\n",
+       "### 5. 재료 공유 패턴과 칵테일 패밀리\n",
+       "whiskey와 vermouth는 각각의 칵테일에서 중요한 역할을 하며, 서로 다른 맛의 조합을 통해 다양한 음료를 만들어냅니다. 예를 들어, whiskey는 Hot Toddy와 같은 따뜻한 음료에 사용되며, vermouth는 Addison과 같은 차가운 칵테일에 사용됩니다. 이 두 재료는 서로 다른 칵테일 패밀리에서 각각의 특성을 잘 살리고 있습니다.\n",
+       "\n",
+       "### 6. 재료 조합의 다양성과 변화 가능성\n",
+       "whiskey와 vermouth의 조합은 다양한 변형을 가능하게 합니다. 예를 들어, whiskey를 vermouth와 섞어 Manhattan과 같은 클래식 칵테일을 만들 수 있습니다. 이처럼 재료의 조합에 따라 맛의 변화가 가능하며, 각각의 칵테일이 가진 독특한 맛을 탐험할 수 있습니다.\n",
+       "\n",
+       "### 7. 제조 기법과 서빙 스타일의 공통점과 차이점\n",
+       "Hot Toddy는 따뜻하게 서빙되는 반면, Addison은 차가운 글라스에 서빙됩니다. 두 칵테일 모두 재료를 섞는 과정이 있지만, Hot Toddy는 끓는 물을 추가하여 온도를 높이는 반면, Addison은 재료를 차갑게 유지하는 방식으로 제조됩니다.\n",
+       "\n",
+       "### 8. 숨겨진 연결고리 발견\n",
+       "whiskey와 vermouth는 서로 다른 칵테일에서 공통적으로 사용되며, 이 두 재료를 통해 다양한 맛의 조합을 탐구할 수 있습니다. 예를 들어, Manhattan은 whiskey와 vermouth의 조합으로 유명하며, 이 두 재료의 조화가 새로운 칵테일의 가능성을 열어줍니다.\n",
+       "\n",
+       "이와 같이 whiskey와 vermouth를 포함한 칵테일들은 서로 다른 맛과 스타일을 통해 다양한 음료 경험을 제공합니다. 재료의 조합과 제조 기법을 통해 새로운 칵테일을 발견하는 재미를 느낄 수 있습니다.</div>\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 🤖 Task Classifier 테스트\n",
+    "\n",
+    "from prompts.task_classifier_prompt import TASK_CLASSIFIER_TEMPLATE\n",
+    "import json\n",
+    "\n",
+    "def classify_and_search(question: str):\n",
+    "    \"\"\"질문을 분류하고 해당 알고리즘으로 검색\"\"\"\n",
+    "    \n",
+    "    # 1. Task Classification\n",
+    "    print(f\"🔍 질문: {question}\")\n",
+    "    print(\"\\n🤖 Task Classifier 분석 중...\")\n",
+    "    \n",
+    "    # Task classifier prompt 생성\n",
+    "    classifier_prompt = TASK_CLASSIFIER_TEMPLATE.format(question=question)\n",
+    "    \n",
+    "    try:\n",
+    "        # LLM으로 분류\n",
+    "        response = openai.chat.completions.create(\n",
+    "            model=\"gpt-4o-mini\",\n",
+    "            messages=[\n",
+    "                {\"role\": \"user\", \"content\": classifier_prompt}\n",
+    "            ],\n",
+    "            temperature=0\n",
+    "        )\n",
+    "        \n",
+    "        classification_result = json.loads(response.choices[0].message.content)\n",
+    "        task = classification_result[\"task\"]\n",
+    "        confidence = classification_result[\"confidence\"]\n",
+    "        reason = classification_result[\"reason\"]\n",
+    "        \n",
+    "        print(f\"📊 분류 결과: {task} (신뢰도: {confidence}%)\")\n",
+    "        print(f\"💭 분류 이유: {reason}\")\n",
+    "        \n",
+    "        # 2. 해당 알고리즘으로 검색\n",
+    "        print(f\"\\n🚀 {task} 알고리즘으로 검색 실행...\")\n",
+    "        \n",
+    "        if task == \"C1\":\n",
+    "            results = c1_retrieval.retrieve(question)\n",
+    "            display_c1_results(question, results)\n",
+    "        elif task == \"C2\":\n",
+    "            results = c2_retrieval.retrieve(question)\n",
+    "            display_c2_results(question, results)\n",
+    "        elif task == \"C3\":\n",
+    "            results = c3_retrieval.retrieve(question)\n",
+    "            display_c3_results(question, results)\n",
+    "        elif task == \"C4\":\n",
+    "            results = c4_retrieval.retrieve(question)\n",
+    "            display_c4_results(question, results)\n",
+    "        else:\n",
+    "            print(f\"❌ 알 수 없는 태스크: {task}\")\n",
+    "            \n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ 분류 중 오류 발생: {e}\")\n",
+    "\n",
+    "# 테스트 질문\n",
+    "test_question = \"whiskey와 vermouth가 들어간 칵테일들\"\n",
+    "classify_and_search(test_question)"
+   ]
   }
  ],
  "metadata": {
