--- a/user.ipynb
+++ b/user.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
     "            'expert': '시각적 칵테일 검색 전문가'\n",
     "        },\n",
     "        'C2': {\n",
-    "            'name': '🍷 C2 Glass Type + 계층적 재료 매칭',\n",
+    "            'name': '🍷 C2 Glass Type + 재료 매칭',\n",
     "            'template': C2_PROMPT_TEMPLATE,\n",
     "            'expert': '글라스 타입과 재료 매칭 전문가'\n",
     "        },\n",
@@ -287,7 +287,7 @@
     "            'expert': 'Multi-hop 재료 확장 기반 칵테일 네트워크 전문가'\n",
     "        },\n",
     "        'C4': {\n",
-    "            'name': '🎯 C4 유사 칵테일, 재료 복잡도 기반 대안 추천',\n",
+    "            'name': '🎯 C4 재료기반 유사 레시피 칵테일 추천',\n",
     "            'template': C4_PROMPT_TEMPLATE,\n",
     "            'expert': '칵테일 유사도 및 대안 추천 전문가'\n",
     "        }\n",
@@ -535,11 +535,11 @@
     "    print(\"   4️⃣ 재료 공유 관계 확장 (해당 재료를 가진 칵테일 2-3개)\")\n",
     "    print(\"   5️⃣ 최종 시각 랭킹 (전체 후보 imageDescription 정렬)\")\n",
     "    \n",
-    "    print(\"\\n💡 C2 알고리즘 (Glass Type + 계층적 재료 매칭):\")\n",
+    "    print(\"\\n💡 C2 알고리즘 (Glass Type + 재료 매칭):\")\n",
     "    print(\"   1️⃣ 키워드 추출 (cocktail, ingredients, glassType, category)\")\n",
     "    print(\"   2️⃣ Glass Type 결정 (명시적 또는 추론)\")\n",
     "    print(\"   3️⃣ 해당 Glass Type 칵테일들 필터링\")\n",
-    "    print(\"   4️⃣ 계층적 재료 매칭 (모든 재료 → 1개씩 제거하며 확장)\")\n",
+    "    print(\"   4️⃣ 재료 매칭 (모든 재료 → 1개씩 제거하며 확장)\")\n",
     "    print(\"   5️⃣ 레벨별 imageDescription 유사도 정렬\")\n",
     "    print(\"   6️⃣ 상위 K개 선택\")\n",
     "    \n",
@@ -550,7 +550,7 @@
     "    print(\"   4️⃣ 중복 제거 및 imageDescription 유사도 기반 최종 랭킹\")\n",
     "    print(\"   5️⃣ 상세 레시피 정보 제공\")\n",
     "    \n",
-    "    print(\"\\n💡 C4 알고리즘 (유사 칵테일, 재료 복잡도 기반 대안 추천):\")\n",
+    "    print(\"\\n💡 C4 알고리즘 (재료기반 유사 레시피 칵테일 추천):\")\n",
     "    print(\"   1️⃣ 타겟 칵테일 추출 (이름 또는 재료 기반)\")\n",
     "    print(\"   2️⃣ 복잡도 필터링 (재료 개수 ±2 범위)\")\n",
     "    print(\"   3️⃣ 공유 재료 개수로 유사도 계산\")\n",
